--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@angular/platform-browser": "^11.0.8",
     "@angular/platform-browser-dynamic": "^11.0.8",
     "@angular/router": "^11.0.8",
+    "@fullcalendar/core": "4.4.0",
+    "@types/node": "8.9.5",
     "chart.js": "2.9.3",
     "primeflex": "2.0.0",
     "primeicons": "4.1.0",
